fixed issue with tableau cards cutting off when stacked high

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -72,6 +72,7 @@ html{
   display: flex;
   justify-content: center;
   gap: 1rem;
+  margin-bottom: 5rem;
 }
 
 ul {
